--- a/style/style.css
+++ b/style/style.css
@@ -38,16 +38,20 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: transform 0.3s ease-in-out;
+  gap: 1rem; /* Adiciona espaçamento entre os botões */
+  flex-wrap: wrap; /* Faz com que os botões quebrem linha em telas menores */
+  margin-top: 1rem; /* Adiciona um espaçamento superior */
 }
 
-.button-container:hover {
-  transform: translateY(-5px);
+.button-container button:hover {
+  background-color: #005bcc;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
 }
 
 .button-container button {
   font-size: 1rem;
-  padding: 10px;
+  padding: 1rem 2rem; /* Aumenta o espaçamento interno do botão */
   border-radius: 15px;
   background-color: #0077ff;
   color: white;
@@ -65,16 +69,51 @@ body {
 
 /* Media queries */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   #mapid {
     height: 60%;
     max-width: 600px;
   }
 }
 
+@media only screen and (max-width: 768px) {
+  #mapid {
+    height: 60%;
+    max-width: 500px;
+  }
+  .button-container button {
+    font-size: 0.8rem; /* Diminui a fonte */
+    padding: 0.8rem 1.5rem; /* Diminui o espaçamento interno */
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  #mapid {
+    height: 70%;
+    max-width: 350px;
+  }
+}
+
 @media only screen and (max-width: 480px) {
   #mapid {
     height: 79%;
-    max-width: 400px;
+    max-width: 300px;
+  }
+
+  .button-container button {
+    font-size: 0.7rem; /* Diminui a fonte */
+    padding: 0.7rem 1.2rem; /* Diminui o espaçamento interno */
+  }
+
+  .button-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button-container button {
+    margin-top: 10px;
+    width: 100%;
+    max-width: 100%;
   }
 }
