--- a/style/style.css
+++ b/style/style.css
@@ -19,15 +19,13 @@ body {
 }
 
 #mapid {
-  height: 80%;
-  max-width: 800px;
+  height: 100vh;
+  max-width: 100vw;
   width: 100%;
   padding: 0 20px;
   margin-bottom: 20px;
-  border-radius: 15px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-
 }
 
 #mapid:hover {
@@ -38,92 +36,109 @@ body {
 .button-container {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   align-items: center;
-  gap: 1rem; /* Adiciona espaçamento entre os botões */
-  flex-wrap: wrap; /* Faz com que os botões quebrem linha em telas menores */
-  margin-top: 1rem; /* Adiciona um espaçamento superior */
-}
-
-.button-container button:hover {
-  background-color: #005bcc;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  transform: translateY(-2px);
+  gap: 1rem;
+  /* Adiciona espaçamento entre os botões */
+  flex-wrap: wrap;
+  /* Faz com que os botões quebrem linha em telas menores */
+  margin-top: 1rem;
+  /* Adiciona um espaçamento superior */
+  bottom: 12%;
+  position: absolute;
+  z-index: 1000;
 }
 
 .button-container button {
   font-size: 1rem;
-  padding: 1rem 2rem; /* Aumenta o espaçamento interno do botão */
+  padding: 1rem 2rem;
   border-radius: 15px;
-  background-color: #0077ff;
+  background-color: rgba(128, 128, 128, 0.7);
+  /* Cinza com 50% de transparência */
   color: white;
   border: none;
   cursor: pointer;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out,
     transform 0.3s ease-in-out;
-  
+  position: relative;
 }
 
 .button-container button:hover {
-  background-color: #005bcc;
+  background-color: rgba(0, 0, 0, 0.8);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   transform: translateY(-2px);
+  color: white;
+}
+
+.button-container button::before {
+  content: attr(data-text);
+  position: absolute;
+  top: -40px;
+  left: 0%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 8px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.button-container button:hover::before {
+  opacity: 1;
+  transform: translateY(-20px);
 }
 
 /* Media queries */
 
-@media only screen and (max-width: 992px) {
-  #mapid {
-    height: 60%;
-    max-width: 600px;
-  }
-}
-
 @media only screen and (max-width: 768px) {
-  #mapid {
-    height: 60%;
-    max-width: 500px;
-  }
   .button-container button {
-    font-size: 0.8rem; /* Diminui a fonte */
-    padding: 0.8rem 1.5rem; /* Diminui o espaçamento interno */
+    font-size: 0.8rem;
+    /* Diminui a fonte */
+    padding: 0.8rem 1.5rem;
+    /* Diminui o espaçamento interno */
   }
 }
 
 @media only screen and (max-width: 576px) {
-  #mapid {
-    height: 70%;
-    max-width: 350px;
-  }
   #clock {
-    font-size: 1.5rem; /* Diminui o tamanho da fonte em telas menores */
-    top: 78%; /* Ajusta a posição vertical */
+    font-size: 1.5rem;
+    /* Diminui o tamanho da fonte em telas menores */
+    top: 78%;
+    /* Ajusta a posição vertical */
+  }
+
+  .button-container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    top: 88%;
   }
 
   @media only screen and (max-width: 480px) {
-    #mapid {
-      height: 79%;
-      max-width: 300px;
-    }
-
     .button-container button {
-      font-size: 0.7rem; /* Diminui a fonte */
-      padding: 0.7rem 1.2rem; /* Diminui o espaçamento interno */
+      font-size: 0.7rem;
+      /* Diminui a fonte */
+      padding: 0.7rem 1.2rem;
+      /* Diminui o espaçamento interno */
     }
 
     .button-container {
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
+      top: 87%;
     }
 
     .button-container button {
-      margin-top: .1rem;
-      width: 100%;
+      width: 50px;
       max-width: 100%;
     }
   }
 }
+
 /* Modo escuro */
 body.dark-mode {
   filter: invert(2) hue-rotate(180deg);
